--- a/src/content/help.html
+++ b/src/content/help.html
@@ -327,7 +327,7 @@
 
     <h3>Private Browsing Permission</h3>
     <dl class="warning">
-      <dt>Chrome</dt>
+      <dt>Chrome <span class="chrome-extension pointer" style="font-style: normal; font-size: 0.8em; display: none;">🔗</span></dt>
       <dd>On Chrome, users must enable "Allow in Incognito", if proxying in incognito mode is required</dd>
       <dd class="footnote">How to: <a href="https://support.google.com/chrome/a/answer/13130396" target="_blank">Extensions in Incognito mode</a></dd>
 
