--- a/src/content/help.html
+++ b/src/content/help.html
@@ -327,11 +327,11 @@
 
     <h3>Private Browsing Permission</h3>
     <dl class="warning">
-      <dt>Chrome <span class="chrome-extension pointer" style="font-style: normal; font-size: 0.8em; display: none;">🔗</span></dt>
+      <dt>Chrome <span class="chrome-extension">🔗</span></dt>
       <dd>On Chrome, users must enable "Allow in Incognito", if proxying in incognito mode is required</dd>
       <dd class="footnote">How to: <a href="https://support.google.com/chrome/a/answer/13130396" target="_blank">Extensions in Incognito mode</a></dd>
 
-      <dt>Firefox</dt>
+      <dt>Firefox <span class="moz-extension">🔗</span></dt>
       <dd>On Firefox, users must enable "Run in Private Windows", as it is required by Firefox for proxy settings</dd>
       <dd class="footnote">How to: <a href="https://support.mozilla.org/kb/extensions-private-browsing#w_enabling-or-disabling-extensions-in-private-windows" target="_blank">Enabling or disabling extensions in private windows</a></dd>
 
