--- a/src/content/options.html
+++ b/src/content/options.html
@@ -722,8 +722,8 @@ https://google.com/ref=help.example.com</pre>
             <th style="width: 1em;"><img src="../image/container.svg" alt=""></th>
             <th style="width: 3em;" data-i18n="method"></th>
             <th style="width: 3em;" data-i18n="type"></th>
-            <th data-i18n="documentURL"></th>
-            <th data-i18n="url"></th>
+            <th data-i18n="documentURL" data-link="#log"></th>
+            <th data-i18n="url" data-link="#log"></th>
             <th><span data-i18n="proxy"></span> <span data-i18n="title"></span></th>
             <th style="width: 3em;" data-i18n="type"></th>
             <th data-i18n="hostname"></th>
