--- a/src/content/help.html
+++ b/src/content/help.html
@@ -1389,11 +1389,11 @@ http://pac-url.com/etc?type=pac&title=Work PAC&color=663300</pre>
       <dd>Live Log displays the web requests in reverse order (new one on top)</dd>
       <dd>It will continue to display while the Options page is open and will stop logging as soon as the page is closed</dd>
       <dd>Log data is not stored</dd>
-      <dd>Document URL displays the web page (which can be an <code>iframe</code>)</dd>
+      <dd><a href="https://developer.mozilla.org/docs/Mozilla/Add-ons/WebExtensions/API/webRequest/onBeforeRequest#documenturl" target="_blank">Document URL</a> displays the web page</dd>
       <dd>URL displays the requests made from that Document URL</dd>
       <dd>Patterns will show if FoxyProxy was in Proxy by Patterns mode when the log page is loaded (refresh if necessary)</dd>
 
-      <dd>Limited logging on chrome since Chrome <a href="https://developer.chrome.com/docs/extensions/reference/webRequest/#event-onBeforeRequest" target="_blank">webRequest.onBeforeRequest</a> API does not provide <a href="https://developer.mozilla.org/docs/Mozilla/Add-ons/WebExtensions/API/webRequest/onBeforeRequest" target="_blank">proxyInfo</a> (and some others)
+      <dd>Limited logging on chrome since Chrome <a href="https://developer.chrome.com/docs/extensions/reference/webRequest/#event-onBeforeRequest" target="_blank">webRequest.onBeforeRequest</a> API does not provide <a href="https://developer.mozilla.org/docs/Mozilla/Add-ons/WebExtensions/API/webRequest/onBeforeRequest#proxyinfo" target="_blank">proxyInfo</a> (and some others)
         <ul>
           <li>No Incognito or Container data on Chrome</li>
           <li>No proxy data on Chrome</li>
