--- a/src/content/about.html
+++ b/src/content/about.html
@@ -34,6 +34,7 @@
       <dd>Added Proxy by Pattern tester</dd>
       <dd>Added show/hide feature to toolbar popup elements based on Tab URL</dd>
       <dd>Added Tab Proxy by patterns feature (Firefox only) (#180)</dd>
+      <dd>Added Test feature</dd>
       <dd>Changed Firefox icons to PNG for compatibility with Chrome</dd>
       <dd>Enabled sending username without password for SOCKS (Firefox only)</dd>
       <dd>Fixed a Drag and Drop issue (#183)</dd>
