--- a/src/content/help.html
+++ b/src/content/help.html
@@ -781,6 +781,13 @@
       <dd>Proxy <i>Title</i>, <i>Hostname</i>, and <i>Port</i> are searched and display filtered based on the input value (case-insensitive)</dd>
       <dd>Use <i>:port</i> to filter by port</dd>
 
+      <dt class="experimental">Test</dt>
+      <dd>Select a proxy (or the first one will be selected) and an IP check server to test</dd>
+      <dd>It is recommended to have no other active network connections at the time of the test</dd>
+      <dd>Tests can be run consecutively</dd>
+      <dd>On Chrome, proxy authentication must be done before starting the test <a href="https://issues.chromium.org/issues/40880379" title="MV3 onAuthRequired is not triggered by requests made by extension pages" target="_blank">ⓘ</a></dd>
+
+
       <dt class="experimental">Ping</dt>
       <dd>Check server response <span>(active, http/https only)</span></dd>
       <dd>The method only provides an indication, as it is affected by many other factors</dd>
