--- a/src/content/options.html
+++ b/src/content/options.html
@@ -690,7 +690,7 @@
     <section class="tester">
       <fieldset>
 
-        <h3 data-i18n="pattern"></h3>
+        <h3 data-i18n="pattern" data-link="#pattern-guide"></h3>
         <p class="description" data-i18n="testerDescription"></p>
         <div class="tester-pattern">
           <select>
