--- a/src/content/about.html
+++ b/src/content/about.html
@@ -17,6 +17,9 @@
     <h2 id="changelog">Changelog</h2>
     <dl>
 
+      <dt>9.1</dt>
+      <dd>Fixed an error on Android (#196)</dd>
+
       <dt>9.0</dt>
       <dd>Added "407 Proxy Authentication Required" to the log (#145)</dd>
       <dd>Added "Get Associated Domains" feature to Log (#191)</dd>
