--- a/src/content/about.html
+++ b/src/content/about.html
@@ -18,7 +18,7 @@
     <dl>
 
       <dt>9.1</dt>
-      <dd>Fixed an error on Android (#196)</dd>
+      <dd>Fixed an error on Firefox for Android (#196)</dd>
 
       <dt>9.0</dt>
       <dd>Added "407 Proxy Authentication Required" to the log (#145)</dd>
