--- a/src/content/about.html
+++ b/src/content/about.html
@@ -17,6 +17,9 @@
     <h2 id="changelog">Changelog</h2>
     <dl>
 
+      <dt>9.2</dt>
+      <dd>Fixed an error when saving incomplete proxies (#197)</dd>
+
       <dt>9.1</dt>
       <dd>Fixed an error on Firefox for Android (#196)</dd>
 
@@ -42,7 +45,7 @@
       <dd>Enabled sending username without password for SOCKS (Firefox only)</dd>
       <dd>Fixed a Drag and Drop issue (#183)</dd>
       <dd>Fixed an issue with resetting containers (from 8.10) (#185)</dd>
-      <dd>Increased minimum version to Firefox 128 (released 2024-07-09) due to Firefox root certificate expiry on 14 March</dd>
+      <dd>Increased minimum version to Firefox 128 (released 2024-07-09) due to Firefox root certificate expiry on 2025-03-14</dd>
       <dd>Removed Chrome v3 to v8 data migration decryption code</dd>
       <dd>Removed default network passthrough on Firefox in favour of <code>about:config</code> setting (Firefox 137+) (#178)</dd>
       <dd>Renamed "Quick Add" to "Include Host"</dd>
